--- a/roles/web/tasks/logrotate.yml
+++ b/roles/web/tasks/logrotate.yml
@@ -2,7 +2,7 @@
 - name: copy logrotate.d
   template: src={{item.src}} dest={{item.dest}} owner=root group=root mode=644
   with_items:
-    - src: logrotate/nginx
+    - src: logrotate/nginx.j2
       dest: /etc/logrotate.d/nginx
-    - src: logrotate/rails
+    - src: logrotate/rails.j2
       dest: /etc/logrotate.d/rails
